<resources>
    <string name="app_name">Amoogye</string>

    <string name="navigation_main_calc">계산기</string>
    <string name="navigation_main_tools">계량도구</string>
    <string name="navigation_main_timer">타이머</string>
    <string name="navigation_main_setting">설정</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- tools -->
    <string name="tools_bottom_btn_addUtils">계량도구 추가</string>
    <string name="timer_text_hour">시간</string>
    <string name="timer_text_minute">분</string>
    <string name="timer_text_second_before">초 뒤에</string>
    <string name="timer_text_second_after">초가</string>
    <string name="timer_text_last_before">알려드릴게요!</string>
    <string name="timer_text_last_after">끝났습니다!</string>
    <string name="timer_title">타이머</string>
    <string name="timer_pause">일시정지</string>
    <string name="timer_cancel">취소</string>
    <string name="timer_start">시작하기</string>

    <!-- setting -->
    <string name="setting_title">설정</string>
    <string name="setting_display">화면설정</string>
    <string name="setting_display_on_off">꺼짐방지</string>
    <string name="setting_alarm">알림설정</string>
    <string name="setting_alarm_sound">사운드</string>
    <string name="setting_alarm_vibration">진동</string>
    <string name="setting_contact">개발자 컨택</string>
    <string name="setting_contact_email">emailemali@gmail.com</string>

    <!-- tools list -->
    <string name="tools_list_title">계량도구</string>
    <string name="tools_list_normal">일반 계량도구</string>
    <string name="tools_list_life">생활 계량도구</string>
    <string name="tools_list_edit">편집</string>
    <string name="tools_list_edit_close">닫기</string>
    <string name="tools_list_edit_delete">삭제</string>
    <string name="tools_list_toast_alert">삭제할 수 있는 계량도구가 없습니다</string>

    <!-- tools add util-->
    <string name="add_util_title">계량도구 추가</string>
    <string name="add_util_name_hint">새로운 도구 1</string>
    <string name="add_util_name_head">새로운 계량도구</string>
    <string name="add_util_name_text">새로운 도구의 이름을 정해주세요</string>
    <string name="add_util_name_alert_ten">이름은 10자까지 입력할 수 있습니다.</string>
    <string name="add_util_name_alert_same">같은 이름의 계량도구가 있습니다.</string>
    <string name="add_util_volume_head">부피 계산하기</string>
    <string name="add_util_volume_by">으로</string>
    <string name="add_util_volume_dot">.</string>
    <string name="add_util_volume_how_many">번 담겨요!</string>
    <string name="add_util_volume_complete">완료</string>
    <string name="add_util_complete_head">완료!</string>
    <string name="add_util_next_step">다음</string>
    <string name="add_util_save_result">확인</string>
    <string name="add_util_alert_cancel">계량도구 추가를 모두 취소\n하시겠습니까?</string>
    <string name="add_util_volume_comment_1">주변 물건으로 </string>
    <string name="add_util_volume_comment_2">의 부피를 계산해보세요.</string>
    <string name="add_util_complete_comment">를 새로운 도구로 추가했습니다.</string>
    <string name="onboarding_1_title">소금 20g, 눈대중으로 넣으세요?</string>
    <string name="onboarding_1_contents">계량컵과 계량스푼 없이 식재료 양을\n측정하는 것은 어려운 일이죠.</string>
    <string name="onboarding_2_title">이제 쉽게 계량할 수 있습니다.</string>
    <string name="onboarding_2_contents">아무계를 이용하면 종이컵, 밥숟가락 등\n우리 주변의 도구로 계량할 수 있으니까요.</string>
    <string name="onboarding_3_title">어떻게 하냐구요?</string>
    <string name="onboarding_3_contents">위 영상처럼 하시면 됩니다. 간단하죠?</string>
    <string name="onboarding_4_title">레시피가 만약 3인분 기준이었다면</string>
    <string name="onboarding_4_contents">위 영상처럼 하시면 됩니다. 간단하죠?</string>
    <string name="onboarding_5_title">아무계와 함께 쉽게 요리해요</string>
    <string name="onboarding_5_contents">지금부터 주변의 아무거나로\n계량을 시작해보세요!</string>
    <string name="onboarding_init">온보딩 다시 보기</string>


    <string name="makers">
        PM/개발 유채은(ychae.leah@gmail.com)\n
        디자인 신도은(tls2906@gmail.com)\n
        디자인 김지현(summerpotato94@gmail.com)\n
        개발 김준희(junhui820@gmail.com)\n
        개발 임수현(k1miso012@gmail.com)\n
        개발 안경무(sodp2@naver.com)\n
        개발 김헌진(ysg01129@gmail.com)
    </string>

</resources>
