<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="timerVM"
            type="cookcook.nexters.com.amoogye.views.timer.presenter.TimerViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/layout_timer_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:background="@color/main_background_color"
            android:visibility="gone">

        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.53"
                android:background="#00ffffff"
                android:padding="16dp">


                <TextView
                    android:id="@+id/txt_timer_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:text="@string/timer_title"
                    android:textColor="@color/timer_title_color"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/txt_timer_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txt_timer_title"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="52dp"
                    android:textColor="@color/timer_theme_color"
                    android:textSize="40sp" />

                <LinearLayout
                    android:id="@+id/layout_timer_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txt_timer_title"
                    android:layout_marginTop="32dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/edit_hour"
                        android:layout_width="@dimen/timer_edit_box_size"
                        android:layout_height="@dimen/timer_edit_box_size"
                        android:background="@drawable/number_input_non_focus_wrap_rounded_box"
                        android:cursorVisible="false"
                        android:padding="@dimen/timer_edit_box_padding"
                        android:text="@{timerVM.hourText}"
                        android:textAlignment="center" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/timer_text_margin"
                        android:text="@string/timer_text_hour"
                        android:textColor="@color/timer_text_color"
                        android:textSize="@dimen/timer_text_size" />

                    <EditText
                        android:id="@+id/edit_minute"
                        android:layout_width="@dimen/timer_edit_box_size"
                        android:layout_height="@dimen/timer_edit_box_size"
                        android:layout_marginStart="@dimen/timer_text_margin"
                        android:background="@drawable/number_input_non_focus_wrap_rounded_box"
                        android:cursorVisible="false"
                        android:padding="@dimen/timer_edit_box_padding"
                        android:text="@{timerVM.minuteText}"
                        android:textAlignment="center" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/timer_text_margin"
                        android:text="@string/timer_text_minute"
                        android:textColor="@color/timer_text_color"
                        android:textSize="@dimen/timer_text_size" />

                    <EditText
                        android:id="@+id/edit_second"
                        android:layout_width="@dimen/timer_edit_box_size"
                        android:layout_height="@dimen/timer_edit_box_size"
                        android:layout_marginStart="@dimen/timer_text_margin"
                        android:background="@drawable/number_input_non_focus_wrap_rounded_box"
                        android:cursorVisible="false"
                        android:padding="4dp"
                        android:text="@{timerVM.secondText}"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/txt_timer_second_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/timer_text_margin"
                        android:text="@string/timer_text_second_before"
                        android:textColor="@color/timer_text_color"
                        android:textSize="@dimen/timer_text_size" />
                </LinearLayout>

                <TextView
                    android:id="@+id/txt_timer_next_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/layout_timer_edit"
                    android:layout_marginTop="27dp"
                    android:text="@string/timer_text_last_before"
                    android:textColor="@color/timer_text_color"
                    android:textSize="@dimen/timer_text_size" />

                <RelativeLayout
                    android:id="@+id/layout_timer_button"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/timer_button_height"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="@dimen/timer_button_margin_top">

                    <Button
                        android:id="@+id/btn_timer_start_stop_flag"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/timer_rounded_theme_button"
                        android:text="@string/timer_start"
                        android:textColor="@color/white"
                        android:textSize="@dimen/timer_button_text_size" />

                    <Button
                        android:id="@+id/btn_timer_cancel"
                        android:layout_width="@dimen/timer_small_button_size"
                        android:layout_height="match_parent"
                        android:background="@drawable/timer_rounded_cancel_button"
                        android:text="@string/timer_cancel"
                        android:textColor="@color/white"
                        android:textSize="@dimen/timer_button_text_size"
                        android:visibility="gone" />

                    <Button
                        android:id="@+id/btn_timer_pause_resume_flag"
                        android:layout_width="@dimen/timer_small_button_size"
                        android:layout_height="match_parent"
                        android:layout_alignParentEnd="true"
                        android:background="@drawable/timer_rounded_theme_button"
                        android:text="@string/timer_pause"
                        android:textColor="@color/white"
                        android:textSize="@dimen/timer_button_text_size"
                        android:visibility="gone" />

                </RelativeLayout>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="4dp"
                android:layout_weight="0.47"
                android:background="#00ffffff"
                android:orientation="vertical">

                <View
                    android:id="@+id/view_contour"
                    android:layout_width="match_parent"
                    android:layout_height="4dp"
                    android:background="@color/main_background_color" />

                <include
                    android:id="@+id/layout_number_button_area"
                    layout="@layout/layout_number_button_wrap"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.47" />

            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>
</layout>