<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/setting_item_start_end"
        android:paddingTop="@dimen/setting_title_top"
        android:paddingEnd="@dimen/setting_item_start_end"
        android:paddingBottom="@dimen/setting_title_bottom">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nanum_square_b"
            android:text="@string/setting_title"
            android:textColor="@color/setting_text_color"
            android:textSize="@dimen/setting_title_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/setting_text_display"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/setting_border"
                android:fontFamily="@font/nanum_square_r"
                android:padding="@dimen/setting_item_title"
                android:text="@string/setting_display"
                android:textColor="@color/setting_text_color"
                android:textSize="@dimen/setting_item_title_text_size" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/setting_text_onoffDisplay"
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_box_height"
                android:fontFamily="@font/nanum_square_r"
                android:paddingStart="@dimen/setting_item_start_end"
                android:paddingTop="@dimen/setting_sub_item_top"
                android:paddingEnd="@dimen/setting_item_start_end"
                android:paddingBottom="@dimen/setting_sub_item_bottom"
                android:text="@string/setting_display_on_off"
                android:textColor="@color/setting_text_color_soft"
                android:textSize="@dimen/setting_sub_item_text_size" />

            <Switch
                android:id="@+id/setting_switch_on_off_display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:fontFamily="@font/nanum_square_r"
                android:paddingStart="@dimen/setting_item_start_end"
                android:paddingEnd="@dimen/setting_item_start_end"
                android:thumb="@drawable/setting_on_off_thumb"
                android:track="@drawable/setting_on_off_selector"  />

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/setting_text_onboarding_init"
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_box_height"
                android:fontFamily="@font/nanum_square_r"
                android:paddingStart="@dimen/setting_item_start_end"
                android:paddingTop="@dimen/setting_sub_item_top"
                android:paddingEnd="@dimen/setting_item_start_end"
                android:paddingBottom="@dimen/setting_sub_item_bottom"
                android:text="@string/onboarding_init"
                android:textColor="@color/setting_text_color_soft"
                android:textSize="@dimen/setting_sub_item_text_size" />

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="12dp"
        android:background="@color/setting_background_color" />

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/setting_text_alarm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/setting_border"
                android:fontFamily="@font/nanum_square_r"
                android:padding="@dimen/setting_item_title"
                android:text="@string/setting_alarm"
                android:textColor="@color/setting_text_color"
                android:textSize="@dimen/setting_item_title_text_size" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/setting_text_sound"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/setting_border_soft"
                    android:fontFamily="@font/nanum_square_r"
                    android:paddingStart="@dimen/setting_item_start_end"
                    android:paddingTop="@dimen/setting_sub_item_top"
                    android:paddingEnd="@dimen/setting_item_start_end"
                    android:paddingBottom="@dimen/setting_sub_item_bottom"
                    android:text="@string/setting_alarm_sound"
                    android:textColor="@color/setting_text_color_soft"
                    android:textSize="@dimen/setting_sub_item_text_size" />

                <Switch
                    android:id="@+id/setting_switch_sound"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/nanum_square_r"
                    android:paddingStart="@dimen/setting_item_start_end"
                    android:paddingEnd="@dimen/setting_item_start_end"
                    android:thumb="@drawable/setting_on_off_thumb"
                    android:track="@drawable/setting_on_off_selector"  />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/setting_text_vibration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nanum_square_r"
                    android:paddingStart="@dimen/setting_item_start_end"
                    android:paddingTop="@dimen/setting_sub_item_top"
                    android:paddingEnd="@dimen/setting_item_start_end"
                    android:paddingBottom="@dimen/setting_sub_item_bottom"
                    android:text="@string/setting_alarm_vibration"
                    android:textColor="@color/setting_text_color_soft"
                    android:textSize="@dimen/setting_sub_item_text_size" />

                <Switch
                    android:id="@+id/setting_switch_vibration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/nanum_square_r"
                    android:paddingStart="@dimen/setting_item_start_end"
                    android:paddingEnd="@dimen/setting_item_start_end"
                    android:thumb="@drawable/setting_on_off_thumb"
                    android:track="@drawable/setting_on_off_selector"/>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="12dp"
        android:background="@color/setting_background_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/setting_text_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/setting_border"
                android:fontFamily="@font/nanum_square_r"
                android:padding="@dimen/setting_item_title"
                android:text="@string/setting_contact"
                android:textColor="@color/setting_text_color"
                android:textSize="@dimen/setting_item_title_text_size" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_setting_license"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nanum_square_r"
                android:paddingStart="@dimen/setting_item_start_end"
                android:paddingTop="@dimen/setting_sub_item_top"
                android:paddingEnd="@dimen/setting_item_start_end"
                android:paddingBottom="@dimen/setting_sub_item_bottom"
                android:text="라이센스"
                android:textColor="@color/setting_text_color_soft"
                android:textSize="@dimen/setting_sub_item_text_size" />

            <TextView
                android:id="@+id/setting_text_contact_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nanum_square_r"
                android:paddingStart="@dimen/setting_item_start_end"
                android:paddingTop="@dimen/setting_sub_item_top"
                android:paddingEnd="@dimen/setting_item_start_end"
                android:paddingBottom="@dimen/setting_sub_item_bottom"
                android:text="ysg01129@gmail.com"
                android:textColor="@color/setting_text_color_soft"
                android:textSize="@dimen/setting_sub_item_text_size" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>